gcc/testsuite/treelang/compile/noproto.tree
// { dg-do compile }
foo // { dg-error "foo" "prototype" }
{ 
 x = 3;
}
